PROGRAM-84 new form "orders" is ready. There are some corrections in "dashboard"

--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1052,8 +1052,11 @@ body#output {
 }
 
 .orders.my_orders.orders_new .content .buttons button:nth-child(2) {
-    background: #a0512e;
+    /*background: #a0512e;*/
     margin-right: 0;
+}
+.orders.my_orders.orders_new .content .buttons button.active{
+    background: #a0512e;
 }
 
 .orders.my_orders.orders_new .content form {
