PROGRAM-84 new form "newordertosell" is ready. Refactored 'dashboard', 'orders'

--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1135,8 +1135,16 @@ body#output {
     }
 }
 
+.clearfix:after {
+    display: block;
+    content: "";
+    clear: both;
+}
 
-
+.form-input-error-message{
+    display: inline-block;
+    margin-left: 20%;
+}
 
 
 
