--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1147,7 +1147,24 @@ body#output {
 }
 
 
+.form{
+    float: left;
+    margin-bottom: 0 !important;
+}
 
+#currency.currency-for-output-select {
+    width: 75%;
+    display: block;
+    margin-top: 0;
+    position: relative;
+    margin-left: 0;
+    padding: 5px 10px;
+    overflow: visible;
+    background-color: rgba(112, 33, 14, 1);
+    /*не переопределял из оригинального #currency*/
+    min-width: 95px;
+    z-index: 10;
+}
 
 
 
