repair the button "fogot password"

--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -653,7 +653,8 @@ footer p {
 
 #myModal .modal-dialog {
     width: 100%;
-    margin: 10px auto;
+    /*margin: 10px auto;*/
+    margin: 10px auto 0 auto;
 }
 
 #myModal .content {
