--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1205,27 +1205,27 @@ body#output {
     padding: 5px 30px;
 }
 
-form#order.submit-order-form, form#command.submit-order-form{
+form#order.submit-order-form, form#command.submit-order-form {
     display: inline-block;
     margin: 0 0 0 2%;
     width: 30%;
 }
 
-form#order.submit-order-form button, form#command.submit-order-form button{
+form#order.submit-order-form button, form#command.submit-order-form button {
     margin: 0 0 0 0;
     width: 100%;
 }
 
-
-.submit-order-button-container{
+.submit-order-button-container {
     width: 100%;
     margin: 50px 0 0 0;
 }
-.submit-order-label{
+
+.submit-order-label {
     width: 30%;
 }
 
-.submit-order-input{
+.submit-order-input {
     display: inline-block;
     width: 65%;
     border: solid 1px #a56650;
@@ -1239,7 +1239,7 @@ form#order.submit-order-form button, form#command.submit-order-form button{
     font-size: 14px;
 
     border-radius: 4px;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
 
 #myModal .content form a.button_forgot {
@@ -1256,12 +1256,14 @@ form#order.submit-order-form button, form#command.submit-order-form button{
     margin-top: 10px;
 }
 
-#myModal .content form button.button_enter{
+#myModal .content form button.button_enter {
     margin-top: 10px;
     height: 28px;
 }
 
-
+#html .rc-anchor.rc-anchor-normal.rc-anchor-light{
+    background-color: rgba(255, 255, 255, 0) !important;
+}
 
 
 
