--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1261,11 +1261,11 @@ form#order.submit-order-form button, form#command.submit-order-form button {
     height: 28px;
 }
 
-#html .rc-anchor.rc-anchor-normal.rc-anchor-light{
+#html .rc-anchor.rc-anchor-normal.rc-anchor-light {
     background-color: rgba(255, 255, 255, 0) !important;
 }
 
-.socials-icon-wrapper{
+.socials-icon-wrapper {
     position: relative;
     width: 100%;
     padding: 0 0 5px 0;
@@ -1285,3 +1285,95 @@ form#order.submit-order-form button, form#command.submit-order-form button {
     width: 100%;
     padding: 1px 5px 1px 5px;
 }
+
+/*.container.admin .side_menu ul {
+    margin-left: 0;
+    margin-top: 25px;
+    padding-left: 0;
+}
+
+.container.admin .side_menu ul li{
+    display: block;
+    list-style: outside none none;
+    margin: 1px 0;
+    width: 100%;
+}
+
+.container.admin .side_menu ul li a {
+    background-color: rgba(255, 255, 255, 0.15);
+    color: #fff;
+    display: block;
+    padding: 8px 15px;
+    text-decoration: none;
+}
+
+.container.admin .side_menu ul li a:hover,
+.container.admin .side_menu ul li a.active {
+    background-color: rgba(255, 255, 255, 0.25);
+}*/
+
+.orders_new .content h4 {
+    width: 100%;
+}
+
+.container.orders_new.admin .adminForm-toggler {
+    float: none;
+    display: inline-block;
+    margin: 10px 5% 10px 0;
+    width: 25%;
+    background: #6c1e0c none repeat scroll 0 0;
+    border: medium none;
+    outline: 0 none;
+    padding: 5px 30px;
+}
+
+.container.orders_new.admin .adminForm-toggler.active {
+    background: #a0512e none repeat scroll 0 0;
+}
+
+/*#adminsTable.table.admins-table{
+    width: 100%;
+}*/
+
+.table.admins-table th,
+.table.users-table th{
+    background: #9e604d none repeat scroll 0 0;
+    border: 1px solid #9e604d;
+    padding: 5px 10px;
+}
+.table.admins-table tr,
+.table.users-table tr {
+    border-left: medium none;
+    border-right: medium none;
+    box-sizing: border-box;
+    color: #621609;
+}
+
+/*.table.admin-table tr:nth-child(2) {
+    border-top: 1px solid #995c4c;
+}*/
+
+.table.admins-table tr td,
+.table.users-table tr td {
+    padding: 5px;
+}
+
+.table.admins-table tr td:first-child,
+.table.users-table tr td:first-child{
+    border-left: 1px solid #995c4c;
+}
+
+.container.orders_new.admin .content button {
+    float: none;
+    display: inline-block;
+    background: #6c1e0c none repeat scroll 0 0;
+    margin: 10px 0;
+    width: 20%;
+    text-align: center;
+    padding: 5px 0;
+}
+
+
+
+
+
