--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -759,7 +759,7 @@ footer p {
     background: #ba9287;
     color: #621609;
     border: none;
-    padding: 10px 15px;
+    padding: 5px 15px;
     padding-right: 35px;
     width: 100%;
     margin: 8px 0;
@@ -779,7 +779,7 @@ footer p {
 }
 
 .register form span {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     display: block;
 }
 
@@ -1173,18 +1173,6 @@ body#output {
     display: inline-block;
 }
 
-.input-field-wrapper {
-    display: inline-block;
-    height: 100%;
-    width: 80%;
-}
-
-.input-field-wrapper input {
-    display: inline-block;
-    width: 100% !important;
-    /*margin:  0 0 0 0 !important;*/
-}
-
 #myModal.merchant-input {
     max-width: 420px;
     max-height: 280px;
@@ -1335,32 +1323,39 @@ form#order.submit-order-form button, form#command.submit-order-form button {
     width: 100%;
 }*/
 
-.table.admins-table th,
-.table.users-table th{
+.table.admin-table th {
     background: #9e604d none repeat scroll 0 0;
     border: 1px solid #9e604d;
     padding: 5px 10px;
 }
-.table.admins-table tr,
-.table.users-table tr {
-    border-left: medium none;
-    border-right: medium none;
+
+.table.admin-table tr {
+    /*border-left: medium none;*/
+    /*border-right: medium none;*/
     box-sizing: border-box;
     color: #621609;
+
 }
 
 /*.table.admin-table tr:nth-child(2) {
     border-top: 1px solid #995c4c;
 }*/
 
-.table.admins-table tr td,
-.table.users-table tr td {
+.table.admin-table tr td {
     padding: 5px;
+
+    border-bottom: 1px solid #621609;
+    border-left: 1px solid #621609;
+    margin: 2px;
 }
 
-.table.admins-table tr td:first-child,
-.table.users-table tr td:first-child{
-    border-left: 1px solid #995c4c;
+.table.admin-table tr td:first-child {
+    /*border-left: 1px solid #995c4c;*/
+}
+
+.dataTables_empty {
+    /*display: none;*/
+    visibility: hidden;
 }
 
 .container.orders_new.admin .content button {
@@ -1373,7 +1368,29 @@ form#order.submit-order-form button, form#command.submit-order-form button {
     padding: 5px 0;
 }
 
+.input-block-wrapper {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+}
 
+.input-block-wrapper .input-block-wrapper__label-wrapper .input-block-wrapper__label{
+    margin: 10px 0;
+    width: 100%;
+}
 
+.input-block-wrapper .input-block-wrapper__input-wrapper .input-block-wrapper__input{
+/*.input-block-wrapper span {*/
+    float: right;
+    display: inline-block;
+    /*width: 80% !important;*/
+    width: 100%;
+    margin: 5px 0;
+}
+#admin-add-button{
+    float: right;
+    font-size: 14px;
+    border-radius: 4px;
+}
 
 
