--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1398,3 +1398,110 @@ form#command.submit-order-form button {
 }
 
 
+/*Enter FinPassword Modal*/
+
+#finPassModal {
+    max-width: 320px;
+    max-height: 225px;
+    background-image: url("../img/background.jpg");
+    background-size: cover;
+    margin: 0 auto;
+    margin-top: 100px;
+    padding: 0 10px;
+}
+
+#finPassModal .modal-header {
+    color: rgba(255, 255, 255, .5);
+    border-bottom: solid 1px rgba(255, 255, 255, .25);
+    padding: 5px 15px;
+}
+
+#finPassModal .modal-dialog {
+    width: 100%;
+    /*margin: 10px auto;*/
+    margin: 10px auto 0 auto;
+}
+
+#finPassModal .content {
+    max-width: 360px;
+    background: none;
+}
+
+#finPassModal .modal-content {
+    background: none;
+    box-shadow: none;
+    border: none;
+}
+
+#finPassModal .content form input {
+    display: block;
+    width: 100%;
+    background-color: rgba(255, 255, 255, .5);
+    border: none;
+    color: #621609;
+    margin: 5px 0;
+    padding: 0 10px;
+    line-height: 2em;
+    outline: 0;
+}
+
+::-webkit-input-placeholder {
+    color: #621609;
+}
+
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: #621609;
+}
+
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #621609;
+}
+
+:-ms-input-placeholder {
+    color: #621609;
+}
+
+#finPassModal .content form button.button_enter,
+#finPassModal .content form button.button_forgot {
+    background-color: rgba(255, 255, 255, .5);
+    color: #FFF;
+    border: none;
+    width: 47%;
+    margin-right: 1.5%;
+    line-height: 2em;
+    outline: 0;
+}
+
+#finPassModal .button_forgot a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+#finPassModal .content form button.button_forgot {
+    background-color: transparent;
+    margin-left: 1.5%;
+}
+
+#finPassModal .content form button.button_forgot:hover {
+    background-color: rgba(255, 255, 255, .1);
+}
+
+#finPassModal .content form button.button_enter:hover {
+    color: #621609;
+}
+
+#finPassModal .content form a.button_forgot {
+    float: right;
+    background: rgba(255, 255, 255, .25);
+    color: #65180a;
+    border: none;
+    line-height: 2em;
+    height: 28px;
+    width: 47%;
+    text-decoration: none;
+    max-width: 150px;
+    text-align: center;
+
+}
