TESTING-28 + refactored TokenScheduler + transfered js to head of page + made constants in OrderValidator

--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -201,7 +201,7 @@ ul.nav .margin-left {
 }
 
 .exchange_data .graphic {
-    max-width: 80%;
+    width: 80%;
     float: left;
     overflow: hidden;
     padding-bottom: 15px;
