fix bug with calculated summ canceled orders + auto filling order creation form from dashboard + fix other bugs and refactoring

--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1670,3 +1670,8 @@ a.button_delete_order {
     outline: 0;
     text-decoration: none;
 }
+
+td.allign-center,
+th.allign-center {
+    text-align: center;
+}
