fix in admin panel + fix in create order (catch exception if not enough money)

--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1450,10 +1450,15 @@ form#command.submit-order-form button {
     display: inline-block;
     max-width: 80%;
     margin: 0 0;
-    height: 30px;
+    /*height: 30px;*/
     padding: 5px;
     border: none;
     color: #fff;
+}
+
+.input-block-wrapper .input-block-wrapper__input-wrapper .input-block-wrapper__input:nth-child(2){
+    border-top: 1px solid #a56650;
+    width: 100%;
 }
 
 .input-block-wrapper .input-block-wrapper__input-wrapper .input-block-wrapper__input[readonly] {
