--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -109,7 +109,7 @@ ul.nav .margin-left {
 }
 
 .exchange_data ul {
-    width: 20%;
+    width: 15%;
     padding-left: 0;
     float: left;
 }
@@ -492,12 +492,12 @@ footer p {
     }
 
     .exchange_data ul {
-        width: 15%;
+        width: 10%;
         margin-right: 5%;
     }
 
     ul.nav .margin-left {
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     .exchange_info {
@@ -540,7 +540,8 @@ footer p {
     }
 
     .exchange_data ul li:last-child {
-        width: 120px;
+        /*width: 120px;*/
+        width: 100px;
     }
 
     .exchange_data ul li:last-child ul {
@@ -1671,7 +1672,22 @@ th.allign-center {
 
 .graphic-wrapper{
     float: left;
-    width: 80%;
+    width: 85%;
+}
+
+#graphic-wait{
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    top: -10px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 3px;
 }
 
 .exchange_data .graphic {
@@ -1713,6 +1729,7 @@ th.allign-center {
     /*background: rgba(255, 255, 255, 0.7);*/
     height: 100%;
     padding: 0 10px;
+    white-space: nowrap;
 }
 
 .candle-chart-tip-wrapper{
@@ -1762,10 +1779,17 @@ th.allign-center {
 }
 
 .period-menu {
-    margin: 0 0 0 40px;
+    float: left;
+    margin: 0 0 0 50px;
 }
 
-.period-menu__item {
+.chart-type-menu {
+    float: right;
+    margin: 0 30px 0 0;
+}
+
+.period-menu__item,
+.chart-type-menu__item{
     display: inline-block;
     padding: 5px 15px;
     background: rgba(255, 255, 255, 0.1);
@@ -1773,11 +1797,13 @@ th.allign-center {
     cursor: pointer;
 }
 
-.period-menu__item:hover {
+.period-menu__item:hover,
+.chart-type-menu__item:hover{
     border: 1px solid #84240f;
 }
 
-.period-menu__item.active {
+.period-menu__item.active,
+.chart-type-menu__item.active{
     border: 1px solid white;
 }
 
