--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1703,24 +1703,25 @@ th.allign-center {
 
 .candle-description__item {
     display: inline-block;
-    font-size: 12px;
-    margin: 0 10px 0 0;
-    width: 10%
+    font-size: 10px;
+    margin: 0 5px 0 0;
+    min-width: 11%
 }
 
 .candle-description__item span{
+    font-size: 12px;
     font-weight: bold;
     color: white;
 }
 
 .candle-description__item#candle-date {
-    text-align: right;
-    width: 40%;
-    margin: 0 0 0 0;
+    float:right;
+    font-size: 12px;
+    margin: 0 30px 0 0;
 }
 
 .candle-description__item#candle-date .date{
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .area-chart-tip {
