--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1408,6 +1408,11 @@ form#command.submit-order-form button {
     margin: 5px 0;
 }
 
+
+.input-block-wrapper .input-block-wrapper__input-wrapper option{
+    background-color: #6a1c0b;
+}
+
 .input-block-wrapper__label-wrapper,
 .input-block-wrapper__input-wrapper,
 .input-block-wrapper__error-wrapper {
@@ -1443,6 +1448,8 @@ form#command.submit-order-form button {
     padding: 5px;
     border: none;
     color: #fff;
+    background: transparent;
+    width: 100%;
 }
 
 .input-block-wrapper .input-block-wrapper__input-wrapper .input-block-wrapper__input:nth-child(2) {
@@ -1460,10 +1467,25 @@ form#command.submit-order-form button {
     margin: 0 5px 0 0;
 }
 
-#admin-add-button {
+#admin-withdraw-requests{
     float: right;
     font-size: 14px;
-    border-radius: 4px;
+}
+
+.admin-add-functions-container{
+    margin-bottom: 15px;
+}
+
+#admin-add-functions{
+    float: right;
+    font-size: 14px;
+    overflow: hidden;
+}
+
+#admin-add-functions .admin-add-functions__item{
+    display: inline-block;
+    width: 170px;
+    margin: 0 0 0 10px;
 }
 
 /*Enter FinPassword Modal*/
@@ -1675,6 +1697,11 @@ th.allign-center {
     width: 85%;
 }
 
+.graphic-wrapper--orders-page{
+    float: left;
+    width: 100%;
+}
+
 #graphic-wait{
     position: absolute;
     width: 100px;
@@ -1832,3 +1859,92 @@ th.allign-center {
     cursor: pointer;
 }
 
+/*DELETE ORDER ... */
+#transactionlist-delete-order-button {
+    width: 100%;
+    line-height: 20px;
+    padding: 0 10px;
+    color: white;
+}
+
+.delete-order-info__modal {
+    max-width: 520px;
+    /*max-height: 330px;*/
+    overflow: hidden;
+    background-image: url("../img/background.jpg");
+    background-size: cover;
+    margin: auto;
+    margin-top: 100px;
+    padding: 0 10px;
+    bottom: inherit;
+    background-color: #6a1c0b;
+}
+
+.delete-order-info__modal .modal-header {
+    color: rgba(255, 255, 255, .5);
+    border-bottom: solid 1px rgba(255, 255, 255, .25);
+    padding: 5px 15px;
+}
+
+.delete-order-info__modal .modal-dialog {
+    width: 100%;
+    margin: 10px auto 0 auto;
+}
+
+.delete-order-info__modal .content {
+    max-width: 360px;
+    background: none;
+}
+
+.delete-order-info__modal .modal-content {
+    background: transparent;
+    box-shadow: none;
+    border: none;
+}
+
+.delete-order-info__item {
+    display: inline-block;
+    margin:  0 10px 0 0;
+    color: rgba(255, 255, 255, .7);
+}
+
+.delete-order-info__item span{
+    margin: 0 0 0 5px;
+    color: rgba(255, 255, 255, 1);
+}
+
+#currencyPairName span{
+    margin-left: 0;
+}
+
+.delete-order-info__button {
+    display: inline-block;
+    background-color: #6a1c0b;
+    border: none;
+    padding: 5px 15px;
+    margin: 10px 0 0 10px;
+}
+
+/**/
+
+#order-delete-modal--result-info{
+    max-width: 440px;
+    /*max-height: 180px;*/
+    overflow: hidden;
+    z-index: 99999;
+    border: 10px solid rgba(255, 255, 255, 0.5);
+    margin-top: 200px;
+}
+
+#order-delete-modal--search{
+    max-width: 370px;
+    /*max-height: 390px;*/
+    overflow: hidden;
+}
+
+.datetimepicker.dropdown-menu {
+    background-color: #6a1c0b;
+}
+
+
+/* ... DELETE ORDER*/
