--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1942,7 +1942,7 @@ th.allign-center {
     overflow: hidden;
 }
 
-.datetimepicker.dropdown-menu {
+.ui-datepicker {
     background-color: #6a1c0b;
 }
 
