--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1953,6 +1953,20 @@ th.allign-center {
     display: none;
 }
 
+/*NEWS*/
+.news-add-info__modal {
+    max-width: 520px;
+    /*max-height: 330px;*/
+    overflow: hidden;
+    background-image: url("../img/background.jpg");
+    background-size: cover;
+    margin: auto;
+    margin-top: 100px;
+    padding: 0 10px;
+    bottom: inherit;
+    background-color: #6a1c0b;
+}
+
 .ref-lvl-table {
     cursor:pointer;
 }
