--- a/Controller/src/main/webapp/client/css/style-new.css
+++ b/Controller/src/main/webapp/client/css/style-new.css
@@ -1997,3 +1997,9 @@ th.allign-center {
     bottom: inherit;
     background-color: #6a1c0b;
 }
+
+.chat-locales {
+    float: right;
+    margin: 10px;
+    font-size: 14px;
+}
