--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -1058,6 +1058,21 @@ tr:hover .table-button-block .table-button-block__button {
     margin: 0;
 }
 
+.on-confirmation-detail{
+    display: inline-block;
+    cursor: pointer;
+    padding: 0 0 0 5px;
+}
+
+.mywallet-detail-tooltip{
+    font-size: 1.1rem;
+    line-height: 2rem;
+    padding: 10px;
+    border: 1px solid #969FAF;
+    background-color: rgba(255, 255, 255, 0.4);
+    /*background-color: rgba(239, 242, 248, 0.7);*/
+}
+
 /********************************
 			NYHISTORY (me)
 ********************************/
