--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -758,14 +758,50 @@ td.blue-white {
     padding-left: 5px;
 }
 
+.col-1 {
+    width: 5%;
+    max-width: 5%;
+}
+
 .col-2 {
     width: 10%;
     max-width: 10%;
 }
 
+.col-3 {
+    width: 15%;
+    max-width: 15%;
+}
+
 .col-4 {
     width: 20%;
     max-width: 20%;
+}
+
+/********************************
+			LEFT-SIDER (me)
+********************************/
+.refferal__reference{
+    font-size: 11px;
+    height: 13px;
+    font-weight: 400;
+    margin: 5px 0;
+    white-space: nowrap;
+}
+.refferal__button{
+    display: inline-block;
+    width: 47%;
+    font-weight: 300;
+    color: #fff;
+    background-color: #5c6a80;
+    border: none;
+    margin: 5px 0;
+    padding: 5px;
+    outline: none;
+}
+
+.refferal__button:first-child{
+    margin-right: 4%;
 }
 
 /********************************
@@ -1091,7 +1127,7 @@ tr:hover .table-button-block .table-button-block__button {
     padding: 5px 25px;
     display: inline-block;
     font-weight: 300;
-    width: 175px;
+    width: inherit;
     text-align: center;
     border: none;
     margin: 0;
@@ -1198,6 +1234,10 @@ tr:hover .table-button-block .table-button-block__button {
 table tbody .blink,
 .blink {
     background: rgba(255, 0, 0, 0.1);
+}
+
+.blink_green {
+    background: rgba(0, 128, 0, 0.20);
 }
 
 /********************************
@@ -1308,6 +1348,10 @@ form span.repass {
 /********************************
 			www.amcharts.com GRAPHICS (me)
 ********************************/
+
+.amcharts-chart-div tspan {
+
+}
 
 /********************************
             DASHBOARD CHAT
