--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -259,7 +259,7 @@ header li {
 }
 
 /***********************************
-			LEFT SIDEBAR
+			LEFT SIDEBAR (me)
 ************************************/
 
 .h4_green {
@@ -314,10 +314,22 @@ th, td {
     width: 100%;
 }
 
+.currency_table td:first-child {
+    cursor: pointer;
+}
+
+.currency_table th:first-child {
+    width: 133px;
+}
+
 /*my*/
 .mywallets_table th:last-child,
 .currency_table th:last-child {
     text-align: center;
+}
+
+.currency_table th:last-child {
+    width: 79px;
 }
 
 .currency_table {
@@ -327,7 +339,7 @@ th, td {
 }
 
 .settings-menu-item,
-.home-menu-item{
+.home-menu-item {
     float: right;
 }
 
@@ -393,7 +405,7 @@ th, td {
 .buyBTC__item {
     width: 100%;
     text-align: left;
-    font-size: 1rem;
+    font-size: 1.1rem;
     overflow: hidden;
     margin: 4px 0;
 }
@@ -815,13 +827,27 @@ td.blue-white {
 			LEFT-SIDER (me)
 ********************************/
 .refferal__reference {
+    position: absolute;
     font-size: 11px;
     height: 13px;
     font-weight: 400;
     margin: 5px 0;
     white-space: nowrap;
+    overflow: hidden;
+    max-width: 220px;
 }
 
+.refferal__reference:hover{
+    min-width: 300px;
+}
+
+.refferal__reference:hover ~ .refferal__button-wrapper #refferal-copy{
+    color: #ffff00;
+}
+
+.refferal__button-wrapper{
+    margin: 20px 0 0 0;
+}
 .refferal__button {
     display: inline-block;
     width: 47%;
@@ -923,6 +949,10 @@ td.blue-white {
     width: 12%;
     float: right;
     border-radius: 5px;
+}
+
+.deals-scope-switcher__button {
+    cursor: pointer;
 }
 
 /********************************
@@ -1101,12 +1131,12 @@ td.blue-white {
     margin: 5px 0;
 }
 
-#dashboard button,
+#trading button,
 #myhistory button,
 #myorders button,
 #orders button,
 #mywallets button,
-#passwords-changing button{
+#passwords-changing button {
     font-size: 1.3rem;
 }
 
@@ -1198,7 +1228,7 @@ tr:hover .table-button-block .table-button-block__button {
 			ORDERS (me)
 ********************************/
 /********************************
-            MODAL
+            MODAL (me)
 ********************************/
 .modal-form-dialog .modal-header {
     background: #969faf;
@@ -1265,7 +1295,7 @@ tr:hover .table-button-block .table-button-block__button {
     outline: none;
 }
 
-.confirm-button-wrapper{
+.confirm-button-wrapper {
     margin: 10px 0;
 }
 
@@ -1438,27 +1468,30 @@ form span.repass {
            ORDER-INFO-MODAL
 ********************************/
 
-#order-info-modal button{
+#order-info-modal button {
     height: 25px;
     padding: 0;
 }
-#order-info-modal .modal-dialog{
+
+#order-info-modal .modal-dialog {
     width: 410px;
 }
-#order-info-modal .input-block-wrapper{
+
+#order-info-modal .input-block-wrapper {
     margin: 5px 0 0 0;
 }
-#order-info-modal .input-block-wrapper__label{
+
+#order-info-modal .input-block-wrapper__label {
     line-height: 2.5rem;
     height: 2.5rem;
 }
 
-#order-info-modal .input-block-wrapper__input-wrapper{
+#order-info-modal .input-block-wrapper__input-wrapper {
     line-height: 2.5rem;
     height: 2.5rem;
 }
 
-#order-info-modal .input-block-wrapper__input{
+#order-info-modal .input-block-wrapper__input {
     line-height: 2.5rem;
     height: 2.5rem;
     padding-top: 3px;
@@ -1466,10 +1499,28 @@ form span.repass {
 }
 
 /********************************
-           SETTINGS
+           SETTINGS (me)
 ********************************/
 
 .settings-upload-files {
     font-size: 1.3rem;
     margin: 5px;
+}
+
+/********************************
+           SEARCH (me)
+********************************/
+.table-filter__wrapper {
+    float: right;
+    padding: 11px 0 0 0;
+}
+
+.table-filter__input {
+    display: inline-block;
+    background: transparent;
+    width: 58px;
+    height: 20px;
+    padding: 0 0 0 3px;
+    border: 1px solid rgb(218, 218, 218);
+    outline: none;;
 }
