--- a/Controller/src/main/webapp/client/css/style.css
+++ b/Controller/src/main/webapp/client/css/style.css
@@ -909,6 +909,10 @@ td.blue-white {
     padding: 10px 10px;
 }
 
+.right_header_nav .nav__link {
+    padding: 10px 10px;
+}
+
 .dropdown-menu__logout-form .logout-button {
     background: transparent;
     color: white;
@@ -1592,3 +1596,11 @@ form span.repass {
 #mCSB2_container {
     margin-right: 5px;
 }
+
+
+table.dataTable thead .sorting { background: url('/Content/images/sort_both.png') no-repeat center right; }
+table.dataTable thead .sorting_asc { background: url('/Content/images/sort_asc.png') no-repeat center right; }
+table.dataTable thead .sorting_desc { background: url('/Content/images/sort_desc.png') no-repeat center right; }
+
+table.dataTable thead .sorting_asc_disabled { background: url('/Content/images/sort_asc_disabled.png') no-repeat center right; }
+table.dataTable thead .sorting_desc_disabled { background: url('/Content/images/sort_desc_disabled.png') no-repeat center right; }
